--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "timework-api",
+  "name": "NodeJS-API-Resful",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/nodemon/bin/nodemon.js src/app.js --exec 'npm run lint && node'",
+    "start": "./node_modules/nodemon/bin/nodemon.js src/server.js --exec 'npm run lint && node'",
     "lint": "./node_modules/.bin/eslint **/*.js"
   },
   "keywords": [],
